--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,43 @@ services:
     networks:
       - order-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    networks:
+      - order-network
+    hostname: prometheus    # 호스트 이름 명시적 지정
+#    restart: always
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources    # 경로
+    depends_on:
+      - prometheus
+    networks:
+      - order-network
+#    restart: always
+
 networks:
   order-network:
     driver: bridge
@@ -74,3 +111,5 @@ volumes:
     driver: local
   kafka_data:
     driver: local
+  prometheus_data:
+  grafana_data:
